Implementing (2/2) the parameters interface. Implementing Shortcuts. TODO: some bug to be fixed on Firefox + test on mobile devices.

--- a/examples/gpu/effect-designer.css
+++ b/examples/gpu/effect-designer.css
@@ -21,6 +21,11 @@ input[type=button] {
     max-height: 20em;
 }
 
+#outputs > p,
+#outputs > ul {
+    margin: 1em;
+}
+
 .bold {
     font-weight: bold;
 }
